--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,19 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+VERSION_NAME=0.0.1
+VERSION_CODE=1
+GROUP=com.github.travijuu
+
+POM_DESCRIPTION=Android customizable Number Picker 
+POM_URL=https://github.com/travijuu/NumberPicker
+POM_SCM_URL=https://github.com/travijuu/NumberPicker
+POM_SCM_CONNECTION=scm:git@github.com:travijuu/NumberPicker.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:travijuu/NumberPicker.git
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=travijuu
+POM_DEVELOPER_NAME=Erkin Cakar
