--- a/gradle.properties
+++ b/gradle.properties
@@ -18,11 +18,11 @@
 # org.gradle.parallel=true
 
 
-VERSION_NAME=0.0.1
+VERSION_NAME=1.0.0
 VERSION_CODE=1
 GROUP=com.github.travijuu
 
-POM_DESCRIPTION=Android customizable Number Picker
+POM_DESCRIPTION=A simple customizable NumberPicker plugin for Android
 POM_URL=https://github.com/travijuu/NumberPicker
 POM_SCM_URL=https://github.com/travijuu/NumberPicker
 POM_SCM_CONNECTION=scm:git@github.com:travijuu/NumberPicker.git
