--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@
 
 VERSION_NAME=1.0.0
 VERSION_CODE=1
-GROUP=com.github.travijuu
+GROUP=com.github.travijuu.numberpicker
 
 POM_DESCRIPTION=A simple customizable NumberPicker plugin for Android
 POM_URL=https://github.com/travijuu/NumberPicker
