--- a/gradle.properties
+++ b/gradle.properties
@@ -17,14 +17,14 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-
-VERSION_NAME=1.0.0
-VERSION_CODE=1
-GROUP=com.github.travijuu.numberpicker
+#VERSION_NAME=1.0.3-SNAPSHOT
+VERSION_NAME=1.0.3
+VERSION_CODE=2
+GROUP=com.github.travijuu
 
 POM_DESCRIPTION=A simple customizable NumberPicker plugin for Android
-POM_URL=https://github.com/travijuu/NumberPicker
-POM_SCM_URL=https://github.com/travijuu/NumberPicker
+POM_URL=https://github.com/travijuu/NumberPicker.git
+POM_SCM_URL=https://github.com/travijuu/NumberPicker.git
 POM_SCM_CONNECTION=scm:git@github.com:travijuu/NumberPicker.git
 POM_SCM_DEV_CONNECTION=scm:git@github.com:travijuu/NumberPicker.git
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
@@ -32,3 +32,7 @@ POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=travijuu
 POM_DEVELOPER_NAME=Erkin Cakar
+
+
+RELEASE_REPOSITORY_URL=https://oss.sonatype.org/service/local/staging/deploy/maven2
+SNAPSHOT_REPOSITORY_URL=https://oss.sonatype.org/content/repositories/snapshots
