--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,12 @@
 language: android
+jdk: oraclejdk7
 
 android:
   components:
-    - platform-tools
     - tools
+    - platform-tools
     - build-tools-23.0.2
+    - extra-android-m2repository
     - android-23
-    - sys-img-armeabi-v7a-android-23
-  licenses:
-    - 'android-sdk-license-.+'
 
-jdk:
-  - oraclejdk7
-  - oraclejdk8
-
-env:
-  global:
-    # install timeout in minutes (2 minutes by default)
-    - ADB_INSTALL_TIMEOUT=8
-
-notifications:
-  email: false
-
-sudo: false
-
-before_cache:
-  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-
-before_script:
-  - echo no | android create avd --force --name test --target android-23 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window -gpu off -no-boot-anim &
-  - android-wait-for-emulator
-  - adb devices
-  - adb shell input keyevent 82 &
-
-script:
-  - echo $ADB_INSTALL_TIMEOUT
-  - android list target
-  - ./gradlew connectedAndroidTest
+script: ./gradlew build
